Major Chat System Overhaul - Feb 2, 2026
CLUB-WIDE MESSAGING:
- Add ScrollView to Choose Message Type modal (all 4 options visible)
- Tap outside modal to close
- Expand modal to 95% screen height
- Fix filter scroll snap-back (remove maxHeight: 200)
- Move Send button fixed at bottom (outside scroll)
- Single ScrollView for all filter content (age + gender + teams)
- Expand filter section to use full available space

GENDER FILTER:
- Normalize gender values (male/female/coed canonical)
- Display as Boys/Girls/Coed (no duplicates)
- Combined AND logic for Age + Gender filters

GROUP MESSAGING:
- Horizontal scrolling chips (compact, first name only)
- Can see search results with 5+ people selected

UI IMPROVEMENTS:
- Conversation cards margin adjusted (12px)
- Filter container uses more screen space
- Consistent scroll behavior throughout

DATABASE:
- Normalized teams.gender values in Supabase
- Ready for constraint (male/female/coed/null only)

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@supabase/supabase-js": "^2.93.3",
     "date-fns": "^4.1.0",
     "expo": "~54.0.32",
+    "expo-av": "~16.0.8",
+    "expo-linear-gradient": "~15.0.8",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-native": "0.81.5",
