--- a/app.json
+++ b/app.json
@@ -35,7 +35,7 @@
             { "scheme": "https", "host": "thryvyng.com", "pathPrefix": "/join-staff" },
             { "scheme": "https", "host": "thryvyng.com", "pathPrefix": "/register" },
             { "scheme": "https", "host": "thryvyng.com", "pathPrefix": "/accept-coparent" },
-            { "scheme": "https", "host": "thryvyng.com", "pathPrefix": "/claim-player" }
+            { "scheme": "https", "host": "thryvyng.com", "pathPrefix": "/claim-player"},{"scheme":"https","host":"thryvyng.com","pathPrefix":"/invitation"},{"scheme":"https","host":"thryvyng.com","pathPrefix":"/invitations" }
           ],
           "category": ["BROWSABLE", "DEFAULT"]
         }
