--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "date-fns": "^4.1.0",
     "expo": "~54.0.32",
     "expo-av": "~16.0.8",
+    "expo-constants": "~18.0.13",
     "expo-dev-client": "~6.0.20",
+    "expo-device": "~8.0.10",
     "expo-document-picker": "~14.0.8",
     "expo-image-picker": "~17.0.10",
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.11",
+    "expo-notifications": "~0.32.16",
     "expo-status-bar": "~3.0.9",
     "expo-web-browser": "~15.0.10",
     "react": "19.1.0",
