--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
+    "@miblanchard/react-native-slider": "^2.6.0",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "^8.6.0",
+    "@react-native-community/slider": "^5.1.2",
     "@react-navigation/bottom-tabs": "^7.10.1",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.11.0",
+    "@sentry/react-native": "~7.2.0",
     "@supabase/supabase-js": "^2.93.3",
     "babel-preset-expo": "^54.0.10",
     "date-fns": "^4.1.0",
