feat: Calendar sync, UI improvements, bug fixes (Feb 25)
CALENDAR SYNC:
- CalendarSyncModal with per-team URL copying
- @react-native-clipboard/clipboard integration
- All Teams or individual team calendar options

CALENDAR VIEWS:
- Week view: side-by-side overlapping events
- Day view: handles 3+ concurrent events
- Team color fills entire date block
- Full event type words (PRACTICE, GAME, etc.)
- Dismissable conflict banner
- TeamLegend component

BUG FIXES:
- Event date timezone fix (no more off-by-one day)
- Local date formatting in CreateEventModal/EditEventModal

UI IMPROVEMENTS:
- PlayerAvatar component for consistent photos
- Purple palette for RSVP buttons
- Brighter attendance counts
- Soft color palette for Quick Actions
- Chat team colors

NEW FILES:
- CalendarSyncModal.tsx
- DayView.tsx, WeekView.tsx, TeamLegend.tsx
- PlayerAvatar.tsx
- CantGoReasonModal.tsx
- calendar.ts utility

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^15.0.3",
     "@miblanchard/react-native-slider": "^2.6.0",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-clipboard/clipboard": "^1.16.3",
     "@react-native-community/datetimepicker": "^8.6.0",
     "@react-native-community/slider": "^5.1.2",
     "@react-navigation/bottom-tabs": "^7.10.1",
@@ -23,6 +24,7 @@
     "date-fns": "^4.1.0",
     "expo": "~54.0.32",
     "expo-av": "~16.0.8",
+    "expo-clipboard": "~8.0.8",
     "expo-constants": "~18.0.13",
     "expo-dev-client": "~6.0.20",
     "expo-device": "~8.0.10",
